@@ -141,9 +141,9 @@ SCIP_RETCODE execmain(int argc, const char **argv)
     // history_reset.AddValue(4.0);
     // history_reset.AddValue(3.0);
 
-    Parameter<int> max_restarts(0.7, "max_restarts");
-    max_restarts.AddValue(0);
-    max_restarts.AddValue(1);
+    // Parameter<int> max_restarts(0.7, "max_restarts");
+    // max_restarts.AddValue(0);
+    // max_restarts.AddValue(1);
 
     // Parameter<int> bfs_priority(0.7, "bfs_priority");
     // bfs_priority.AddValue(100000);
@@ -188,8 +188,8 @@ SCIP_RETCODE execmain(int argc, const char **argv)
 
         // TODO: use timeout -1
         SCIP_CALL(SCIPsetRealParam(scip, "limits/time", timeout - 2));
-        SCIP_CALL(SCIPsetIntParam(scip, "presolving/maxrestarts", max_restarts.GetBestValue()));
-        // SCIP_CALL(SCIPsetIntParam(scip, "presolving/maxrestarts", 0));
+        // SCIP_CALL(SCIPsetIntParam(scip, "presolving/maxrestarts", max_restarts.GetBestValue()));
+        SCIP_CALL(SCIPsetIntParam(scip, "presolving/maxrestarts", 0));
         SCIP_CALL(SCIPsetIntParam(scip, "separating/maxcuts", max_cuts.GetBestValue()));
         SCIP_CALL(SCIPsetIntParam(scip, "separating/maxcutsroot", max_cuts_root.GetBestValue()));
         // SCIP_CALL(SCIPsetIntParam(scip, "branching/pscost/priority", 40000)); // default 2000
@@ -370,7 +370,7 @@ SCIP_RETCODE execmain(int argc, const char **argv)
             max_cuts.AdjustScore(-total_score);
             max_cuts_root.AdjustScore(-total_score);
             // history_reset.AdjustScore(-total_score);
-            max_restarts.AdjustScore(-total_score);
+            // max_restarts.AdjustScore(-total_score);
         }
         // system("echo -n \"[END] \";date -Iseconds");
         cout << "[END] " << CurrentDateTime() << "\n"
@@ -380,7 +380,7 @@ SCIP_RETCODE execmain(int argc, const char **argv)
     max_cuts.PrintStats();
     max_cuts_root.PrintStats();
     // history_reset.PrintStats();
-    max_restarts.PrintStats();
+    // max_restarts.PrintStats();
     cout << "Provided hints: " << hint_total
          << " successful hints: " << hint_success << endl;
 
