@@ -57,3 +57,5 @@ Turn off non performing heuristics after index 25
 --- 6 jan full ---
 Max restarts as parameter 0,1
 fix the random seed
+--- 7 jan full ---
+Max restarts back to zero (causes wrong convergence in other params) REVISIT
